k8s_yamls/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: marketing-app
spec:
  replicas: 1
  selector:
    matchLabels: { app: backend }
  template:
    metadata:
      labels: { app: backend }
    spec:
      containers:
        - name: backend
          image: youcefabdellaoui/mcp-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: marketing-app
spec:
  selector: { app: backend }
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
