k8s_yamls/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: marketing-app
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: youcefabdellaoui/mcp-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: marketing-app
spec:
  selector: { app: frontend }
  ports:
    - port: 5173
  type: NodePort
