k8s_yamls/mailhog.yml
# mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: marketing-app
spec:
  replicas: 1
  selector:
    matchLabels: { app: mailhog }
  template:
    metadata:
      labels: { app: mailhog }
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 1025
            - containerPort: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: marketing-app
spec:
  selector: { app: mailhog }
  ports:
    - name: smtp
      port: 1025
    - name: web
      port: 8025
  type: ClusterIP
