k8s_yamls/ingress_https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: marketing-app
spec:
  tls:
  - hosts:
      - mcp.local
    secretName: mcp-local-tls

  rules:
  - host: mcp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5173
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
